# IA-evaluation-tool

./: .dockerignore  .env.example  .gitignore  Dockerfile  IA_Evaluation_Rubric_v2.md  README.md  TRANSCRIPT_FORMAT.md  docker-compose.yml  package.json  pyproject.toml  vitest.config.js
api/: main.py  requirements.txt  rubrics_content.py
rubrics/: answer_evaluation.md  flow_classification.md  followup_question_gen.md  interview_analysis.md
scripts/: init.sql
tests/: conftest.py  test_annotations.py  test_datasets.py  test_load_all.py  test_rubrics.py
web/: api.js  guide.js  index.html  main.js  rubrics.js  state.js  style.css  tab-analysis.js  tab-during.js  tab-jd.js  tab-placeholders.js  tab-questions.js  tab-resume.js  utils.js
web/tests/: api.test.js  guide.test.js  state.test.js  utils.test.js
